--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>learnword
-
-    </title>
+    <title>learnword</title>
 </head>
 
 <body>
-    lol
+    <div id="testresult" class="result">
+        test
+    </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+</script>
+<script type="text/javascript" src="learnword.js"></script>
 
 </html>
