--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div id="testresult" class="result">
         test
     </div>
+    <input type="button" value="click" onclick="getdata()">
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript" src="learnword.js"></script>
 
 </html>
