--- a/index.html
+++ b/index.html
@@ -75,7 +75,28 @@
             </div>
             <hr>
         </div>
-        <button class="btn btn-prime font2" onclick="wordTest()">I know this word</button>
+        <div class="bottombtnrow">
+            <button class="btn btn-prime font2" onclick="wordTest()">I know this word</button>
+            <button id="nextonebtn" class="btn btn-prime font2">next one <span class="material-icons">navigate_next</span> </button>
+        </div>
+    </div>
+
+    <!-- word page -->
+    <div id="wordpage" class="container d-none">
+        <h1 class="word">words</h1>
+        <hr>
+        <div class="allwords aboutpara">
+
+        </div>
+    </div>
+    <!-- about page -->
+    <div id="about" class="container d-none">
+        <h1 class="word">about us</h1>
+        <hr>
+        <div class="aboutpara">
+            <p>this is about us page</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus suscipit officiis, provident hic, esse maiores eligendi debitis sunt repudiandae velit illum dolorem saepe sed autem? Nihil quaerat perspiciatis neque delectus.</p>
+        </div>
     </div>
 
 </body>
